--- a/flashcards/pom.xml
+++ b/flashcards/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>atlantafx-base</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
